# knowledgeforge

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 75d6358c87bc_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: corpora.py  documents.py
backend/app/api/schemas/: corpora.py  documents.py
backend/app/db/: models.py  qdrant_setup.py  redis_client.py
backend/app/domain/: state_machine.py
backend/app/ingestion/: chunker.py  concept_extractor.py  embedder.py  loaders.py  pipeline.py  storage.py
backend/app/retrieval/: __init__.py  hybrid.py  multi_query.py  parent_doc.py  pipeline.py  reranker.py  types.py
backend/tests/: conftest.py  test_chunker.py  test_concept_extractor.py  test_retrieval_pipeline.py  test_rrf.py  test_state_machine.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/retrieval/: page.tsx
frontend/src/components/: create-study-set.tsx  document-list.tsx  document-upload.tsx  document-viewer.tsx  study-set-list.tsx
frontend/src/components/chat/: ContextPanel.tsx  MessageBubble.tsx
frontend/src/components/concepts/: ConceptQuickActions.tsx  ConceptsFilterPanel.tsx  ConceptsPageHeader.tsx  ConceptsTable.tsx  PrerequisiteChip.tsx  index.ts
frontend/src/hooks/: index.ts  useDebounce.ts  useLocalStorage.ts  usePolling.ts
frontend/src/lib/: api.ts
(+22 files in other folders)
